--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>About Us<br></span>
+        <span>About<br></span>
         <h2>About</h2>
         <p>At SheBright, we believe in the power of innovation, creativity, and community to empower women in technology and beyond. </p>
       </div><!-- End Section Title -->
@@ -522,7 +522,7 @@
               <div class="testimonial-item">
                 <p style="height: 150px;">
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>SheBright has empowered me to believe in myself and chase my dreams with confidence! – Priya M.</span>
+                  <span>Thanks to SheBright, I'm not just building in Web3 — I'm thriving. I wholeheartedly recommend this community to any woman looking to make her mark in the next era of the internet!"– Priya M.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <!--<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6x4vxIq5AtBP089MV1HiOVfVvD-u7OxZ5ew&s" class="testimonial-img" alt="">
