--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>About Us<br></span>
+        <span>About<br></span>
         <h2>About</h2>
         <p>At SheBright, we believe in the power of innovation, creativity, and community to empower women in technology and beyond. </p>
       </div><!-- End Section Title -->
