--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Section Title</span>
+        <span>TEAM</span>
         <h2>Team</h2>
         <p>A passionate group of leaders, innovators, and changemakers dedicated to empowering and inspiring the community! - Kumari Vandana</p>
       </div><!-- End Section Title -->
@@ -648,7 +648,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Section Title</span>
+        <span>CONTACT</span>
         <h2>Contact</h2>
         <p>Connect with us via email, phone, or social media, and our team will be happy to assist you. Let's empower and grow together!</p>
       </div><!-- End Section Title -->
