--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>SheBright</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SheBright Academy – Empowering Women with Skills in Digital Marketing, Coding, and Entrepreneurship.">
-    <meta name="keywords" content="SheBright Academy, women empowerment, coding for women, digital skills training, freelancing">
-    <meta name="author" content="SheBright Academy">
-    <meta property="og:title" content="SheBright - Empowering Women Through Skills">
-    <meta property="og:description" content="Join SheBright Academy for expert-led courses in coding, freelancing, and entrepreneurship.">
-    <meta property="og:image" content="URL_TO_YOUR_IMAGE">
-    <meta property="og:url" content="https://yourwebsite.com">
-    <link rel="canonical" href="https://yourwebsite.com">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SheBright - A Community Empowering Women in Tech & Digital Skills</title>
+  <meta name="description" content="SheBright is a vibrant community empowering women with skills in coding, freelancing, entrepreneurship, and digital marketing. Join us and grow together!">
+  <meta name="keywords" content="SheBright Community, women empowerment, coding for women, digital skills, freelancing for women, women in tech, female entrepreneurs, career growth">
+  <meta name="author" content="SheBright Community">
+  <meta property="og:title" content="SheBright - Empowering Women in Tech & Digital Skills">
+  <meta property="og:description" content="Join SheBright, a supportive community for women to learn coding, freelancing, and entrepreneurship. Connect, learn, and grow with us!">
+  <meta property="og:image" content="https://yourwebsite.com/assets/img/og-image.png">
+  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:type" content="website">
+  <link rel="canonical" href="https://yourwebsite.com">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -39,6 +37,22 @@
 </head>
 
 <body class="index-page">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "SheBright Community",
+      "url": "https://yourwebsite.com",
+      "logo": "https://yourwebsite.com/assets/img/logo.png",
+      "description": "SheBright is a vibrant community empowering women with skills in coding, freelancing, entrepreneurship, and digital marketing.",
+      "sameAs": [
+        "https://facebook.com/SheBrightCommunity",
+        "https://twitter.com/SheBright",
+        "https://instagram.com/SheBrightCommunity"
+      ]
+    }
+    </script>
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
