--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img style="height: 500px !important;" src="assets/img/team/Founder.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img style="height: 500px !important;" src="https://github.com/user-attachments/assets/68d01e9b-0732-4cfb-a87d-c3f432eb6705" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Somya Sharma</h4>
                 <span>Founder & CEO</span>
@@ -624,7 +624,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img style="height: 500px !important;" src="assets/img/team/CoFounder.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img style="height: 500px !important;" src="https://github.com/user-attachments/assets/ed2cc772-b4ca-48f6-a220-827277912295" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Laxmi Prajapati</h4>
                 <span>Co-Founder & COO</span>
