--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img style="height: 500px !important;" src="assets/img/team/GM.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img style="height: 500px !important;" src="https://github.com/user-attachments/assets/297191a4-a46d-4096-a95d-12cab9a238be" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Anjali Gautam</h4>
                 <span>General Manager</span>
