--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <meta property="og:image" content="https://yourwebsite.com/assets/img/og-image.png">
   <meta property="og:url" content="https://yourwebsite.com">
   <meta property="og:type" content="website">
+  <meta name="description" content="SheBright is a vibrant community founded by Somya Sharma and Laxmi Prajapati, empowering women with skills in coding, freelancing, entrepreneurship, and digital marketing. Join us and grow together!">
+  <meta name="keywords" content="SheBright Community, Somya Sharma, Laxmi Prajapati, women empowerment, coding for women, digital skills, freelancing for women, women in tech, female entrepreneurs, career growth">
+  <meta name="author" content="SheBright Community - Founded by Somya Sharma (Founder & CEO) and Laxmi Prajapati (Co-Founder & COO)">
+
   <link rel="canonical" href="https://yourwebsite.com">
 
   <!-- Favicons -->
@@ -72,14 +76,14 @@
           <li><a href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Community</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="https://t.me/+e1HQkO3ao2FmMGQ1">Telegram ↗</a></li>
-              <li><a href="https://discord.gg/7ufyJzC5Jt">Discord ↗</a></li>
+              <li><a href="https://t.me/+e1HQkO3ao2FmMGQ1" target="_blank">Telegram ↗</a></li>
+              <li><a href="https://discord.gg/VzBN22adUC" target="_blank">Discord ↗</a></li>
               <li class="dropdown"><a href="#"><span>Socials</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="https://www.linkedin.com/company/shebright">LinkedIn ↗</a></li>
-                  <li><a href="https://x.com/she_bright__">Twitter ↗</a></li>
-                  <li><a href="https://www.instagram.com/she__bright_/">Instagram ↗</a></li>
-                  <li><a href="https://github.com/OfficialSheBright">GitHub ↗</a></li>
+                  <li><a href="https://www.linkedin.com/company/shebright" target="_blank">LinkedIn ↗</a></li>
+                  <li><a href="https://x.com/she_bright__" target="_blank">Twitter ↗</a></li>
+                  <li><a href="https://www.instagram.com/she__bright_/" target="_blank">Instagram ↗</a></li>
+                  <li><a href="https://github.com/OfficialSheBright" target="_blank">GitHub ↗</a></li>
                 </ul>
               </li>
             </ul>
@@ -593,69 +597,61 @@
     </section><!-- /Testimonials Section -->
 
 
-    <!-- Team Section -->
-    <section id="team" class="team section">
+<!-- Team Section -->
+<section id="team" class="team section bg-light py-5">
+  <!-- Section Title -->
+  <div class="container section-title text-center" data-aos="fade-up">
+    <h2 class="display-5 fw-bold">Meet Our Core Team</h2>
+    <p class="text-muted">A passionate group of leaders, innovators, and changemakers dedicated to empowering and inspiring the community! - Kumari Vandana</p>
+  </div>
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <span>TEAM</span>
-        <h2>Team</h2>
-        <p>A passionate group of leaders, innovators, and changemakers dedicated to empowering and inspiring the community! - Kumari Vandana</p>
-      </div><!-- End Section Title -->
+  <!-- Team Members -->
+  <div class="container">
+    <div class="row justify-content-center gy-5">
 
-      <div class="container">
-
-        <div class="row gy-5">
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="member">
-              <div class="pic"><img style="height: 500px !important;" src="https://github.com/user-attachments/assets/1b0cd037-02f7-4db6-b062-ee1194aeab72" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Somya Sharma</h4>
-                <span>Founder & CEO</span>
-                <div class="social">
-                  <a href="https://x.com/SomyaSh42022767"><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://t.me/Somyaa244"><i class="bi bi-telegram"></i></a>
-                  <a href="https://www.linkedin.com/in/somyaasharma0244/"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
+      <!-- Founder -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="card border-0 shadow-sm rounded-4 overflow-hidden h-100">
+          <div>
+            <img height="400px" src="assets/img/team/Founder.jpeg" class="card-img-top object-fit-cover" alt="Somya Sharma">
+          </div>
+          <div class="card-body text-center bg-white">
+            <h4 class="fw-semibold mb-1">Somya Sharma</h4>
+            <span class="text-muted d-block mb-3">Founder & CEO</span>
+            <div class="social d-flex justify-content-center gap-3">
+              <a href="https://x.com/SomyaSh42022767" target="_blank"><i class="bi bi-twitter-x fs-5"></i></a>
+              <a href="https://t.me/Somyaa244" target="_blank"><i class="bi bi-telegram fs-5"></i></a>
+              <a href="https://www.linkedin.com/in/somyaasharma0244/" target="_blank"><i class="bi bi-linkedin fs-5"></i></a>
             </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="member">
-              <div class="pic"><img style="height: 500px !important;" src="https://github.com/user-attachments/assets/ed2cc772-b4ca-48f6-a220-827277912295" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Laxmi Prajapati</h4>
-                <span>Co-Founder & COO</span>
-                <div class="social">
-                  <a href="https://x.com/LogixCraft1"><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://t.me/Prajapatigirl227"><i class="bi bi-telegram"></i></a>
-                  <a href="https://www.linkedin.com/in/laxmiprajapati2707/"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="member">
-              <div class="pic"><img style="height: 500px !important;" src="https://github.com/user-attachments/assets/297191a4-a46d-4096-a95d-12cab9a238be" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Anjali Gautam</h4>
-                <span>General Manager</span>
-                <div class="social">
-                  <a href="https://t.me/anjaligautam4993"><i class="bi bi-telegram"></i></a>
-                  <a href="https://www.linkedin.com/in/anjali-gautam-414700296/"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> <!-- End Team Member -->
-
+          </div>
         </div>
-
       </div>
+      <!-- End Founder -->
 
-    </section><!-- /Team Section -->
+      <!-- Co-Founder -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="card border-0 shadow-sm rounded-4 overflow-hidden h-100">
+          <div>
+            <img height="400px" src="assets/img/team/CoFounder.jpeg" class="card-img-top object-fit-cover" alt="Laxmi Prajapati">
+          </div>
+          <div class="card-body text-center bg-white">
+            <h4 class="fw-semibold mb-1">Laxmi Prajapati</h4>
+            <span class="text-muted d-block mb-3">Co-Founder & COO</span>
+            <div class="social d-flex justify-content-center gap-3">
+              <a href="https://x.com/LogixCraft1" target="_blank"><i class="bi bi-twitter-x fs-5"></i></a>
+              <a href="https://t.me/Prajapatigirl227" target="_blank"><i class="bi bi-telegram fs-5"></i></a>
+              <a href="https://www.linkedin.com/in/laxmiprajapati2707/" target="_blank"><i class="bi bi-linkedin fs-5"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Co-Founder -->
+
+    </div>
+  </div>
+</section>
+<!-- /Team Section -->
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
