--- a/index.html
+++ b/index.html
@@ -601,8 +601,9 @@
 <section id="team" class="team section bg-light py-5">
   <!-- Section Title -->
   <div class="container section-title text-center" data-aos="fade-up">
-    <h2 class="display-5 fw-bold">Meet Our Core Team</h2>
-    <p class="text-muted">A passionate group of leaders, innovators, and changemakers dedicated to empowering and inspiring the community! - Kumari Vandana</p>
+        <span>Team</span>
+        <h2>Team</h2>
+    <p class="text-muted">A passionate group of leaders, innovators, and changemakers dedicated to empowering and inspiring the community!</p>
   </div>
 
   <!-- Team Members -->
