--- a/index.html
+++ b/index.html
@@ -649,6 +649,9 @@
       <!-- End Co-Founder -->
 
     </div>
+    <div class="text-center mt-4">
+  <a href="verify.html" class="btn btn-primary">Verify Employee</a>
+</div>
   </div>
 </section>
 <!-- /Team Section -->
